making changes to the Dockerfile and the pom to accomodate the Java 13 upgrade